TestSuite/PascalABCTests/errors/err0015.pas
procedure Test;
begin
end;

function Func(a : integer) : integer;
begin
end;

var a : integer;
begin
Func('a');
end.